Port CrazyPhone to 1.20.1 on real Forge/NeoForge legacyforge
1.20.1 predates NeoForge's fork of Forge (net.minecraftforge.* ->
net.neoforged.neoforge.*, which happened at the 1.20.2 boundary), so
this targets it through ModDevGradle's own "legacyforge" plugin, which
builds against the real, original net.minecraftforge:forge artifact.
Since that's the same artifact plain Forge users run, this single
implementation covers both NeoForge and Forge users still on 1.20.1.

Required a full rewrite of the networking layer onto old Forge's
SimpleChannel/NetworkRegistry (CustomPacketPayload doesn't exist until
1.20.2), a capability-based rewrite of the phone/soulbound-stash
per-player data (the Attachment API doesn't exist until 1.20.5), and
gating around a long tail of vanilla API generation boundaries between
1.20.1 and the mod's prior floor (WidgetSprites, mouseScrolled,
moveCursorTo, renderBackground/renderTransparentBackground, PlayerSkin/
SkinManager, Data Components, VertexConsumer's fluent API,
SynchedEntityData.Builder, data-driven enchantments, and more).

Both the dedicated server and the client boot the mod cleanly on real
old Forge 47.4.23 with no crashes; :1.20.1:compileJava is clean.
Known gaps: :1.20.1:compileTestJava isn't wired up for legacyforge's
classpath yet, and the dev-launch client run shows cosmetic
missing-model/missing-sound warnings (a folder-mod resource-pack
metadata quirk that shouldn't affect a packaged jar).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>