@@ -174,6 +174,7 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         return Math.round(units / (float) HALF_UNITS_PER_BLOCK);
     }
 
+    //? if fabric || neoforge {
     @Override
     public net.minecraft.network.protocol.Packet<net.minecraft.network.protocol.game.ClientGamePacketListener> getAddEntityPacket(net.minecraft.server.level.ServerEntity serverEntity) {
         int packed = packSpawnData(attachFace(),
@@ -181,6 +182,18 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
                 roundToHalfBlocks(negVUnits()), roundToHalfBlocks(posVUnits()));
         return new net.minecraft.network.protocol.game.ClientboundAddEntityPacket(this, serverEntity, packed);
     }
+    //?}
+    // Real 1.20.1 vanilla's Entity#getAddEntityPacket takes no ServerEntity argument at all (added later),
+    // and ClientboundAddEntityPacket's matching (Entity, int) constructor predates the 3-arg one used above.
+    //? if legacyforge {
+    @Override
+    public net.minecraft.network.protocol.Packet<net.minecraft.network.protocol.game.ClientGamePacketListener> getAddEntityPacket() {
+        int packed = packSpawnData(attachFace(),
+                roundToHalfBlocks(negUUnits()), roundToHalfBlocks(posUUnits()),
+                roundToHalfBlocks(negVUnits()), roundToHalfBlocks(posVUnits()));
+        return new net.minecraft.network.protocol.game.ClientboundAddEntityPacket(this, packed);
+    }
+    //?}
 
     @Override
     public void recreateFromPacket(net.minecraft.network.protocol.game.ClientboundAddEntityPacket packet) {
@@ -202,10 +215,21 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         this.refreshDimensions();
     }
 
+    // The whole photo-frame ENTITY feature is inert below 1.20.5 (see ModEntities.java's own doc comment -
+    // its real ENTITY_TYPE/register()/REGISTRY branches, PHOTO_FRAME included, only exist there) - tryPlace
+    // is never actually reached from a <1.20.5 target either way, so it's a plain stub there instead of
+    // referencing a field that doesn't exist on that floor.
     /** Server-side placement factory - validates the target face has SOME collision geometry (not
      * necessarily a full cube) before ever constructing the entity, mirroring HangingEntity#survives()'s
      * own role but with the fuller-block requirement deliberately dropped. Returns null if the face can't
      * hold a frame (fully empty shape, e.g. air, or already occupied - see {@link #spaceFree}). */
+    //? if legacyforge {
+    public static CrazyPhonePhotoFrameEntity tryPlace(Level level, BlockPos clickedPos, Direction face,
+                                                        Direction placerFacing, PhotoItemData photoData, PhotoFrameData frameData, int borderRgb) {
+        return null;
+    }
+    //?}
+    //? if fabric || neoforge {
     public static CrazyPhonePhotoFrameEntity tryPlace(Level level, BlockPos clickedPos, Direction face,
                                                         Direction placerFacing, PhotoItemData photoData, PhotoFrameData frameData, int borderRgb) {
         BlockState state = level.getBlockState(clickedPos);
@@ -250,6 +274,7 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
             return null;
         return entity;
     }
+    //?}
 
     private static boolean spaceFree(Level level, CrazyPhonePhotoFrameEntity candidate) {
         return level.getEntities(candidate, candidate.getBoundingBox(), other -> other instanceof CrazyPhonePhotoFrameEntity).isEmpty();
@@ -315,10 +340,10 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
      * enforced - only which SIDE of attachPos that size sits on is now free). */
     public void setExtents(int negU, int posU, int negV, int posV) {
         int maxUnits = fr.lordfinn.crazyphone.Config.maxPhotoFrameSizeBlocks * UNITS_PER_BLOCK;
-        negU = Math.clamp(negU, 0, maxUnits);
-        posU = Math.clamp(posU, 0, Math.max(0, maxUnits - negU));
-        negV = Math.clamp(negV, 0, maxUnits);
-        posV = Math.clamp(posV, 0, Math.max(0, maxUnits - negV));
+        negU = Math.max(0, Math.min(negU, maxUnits));
+        posU = Math.max(0, Math.min(posU, Math.max(0, maxUnits - negU)));
+        negV = Math.max(0, Math.min(negV, maxUnits));
+        posV = Math.max(0, Math.min(posV, Math.max(0, maxUnits - negV)));
         if (negU + posU == 0)
             posU = Math.min(maxUnits, UNITS_PER_BLOCK / 4);
         if (negV + posV == 0)
@@ -403,7 +428,7 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
             case WEST -> bounds.minX;
             case EAST -> bounds.maxX;
         };
-        return Math.clamp(raw, 0.0, 1.0);
+        return Math.max(0.0, Math.min(raw, 1.0));
     }
 
     // Vanilla Entity#getLightProbePosition defaults to getEyePosition(), which for this entity is just its
@@ -435,6 +460,7 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         };
     }
 
+    //? if fabric || neoforge {
     @Override
     protected void defineSynchedData(SynchedEntityData.Builder builder) {
         builder.define(DATA_PHOTO_ID, "");
@@ -448,6 +474,24 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         builder.define(DATA_FULLBRIGHT, false);
         builder.define(DATA_BORDER_RGB, 0xFFFFFF);
     }
+    //?}
+    // Real 1.20.1 vanilla's Entity#defineSynchedData takes no Builder at all (added later) - the classic
+    // no-arg override defining directly against the protected entityData field stands in instead.
+    //? if legacyforge {
+    @Override
+    protected void defineSynchedData() {
+        this.entityData.define(DATA_PHOTO_ID, "");
+        this.entityData.define(DATA_OWNER, "");
+        this.entityData.define(DATA_NEG_U, DEFAULT_SIZE_UNITS / 2);
+        this.entityData.define(DATA_POS_U, DEFAULT_SIZE_UNITS - DEFAULT_SIZE_UNITS / 2);
+        this.entityData.define(DATA_NEG_V, DEFAULT_SIZE_UNITS / 2);
+        this.entityData.define(DATA_POS_V, DEFAULT_SIZE_UNITS - DEFAULT_SIZE_UNITS / 2);
+        this.entityData.define(DATA_FACE, Direction.NORTH.get3DDataValue());
+        this.entityData.define(DATA_ROTATION, 0);
+        this.entityData.define(DATA_FULLBRIGHT, false);
+        this.entityData.define(DATA_BORDER_RGB, 0xFFFFFF);
+    }
+    //?}
 
     // Vanilla's own Entity#onSyncedDataUpdated(EntityDataAccessor) is how Entity itself keeps its bounding
     // box in sync with a changed DATA_POSE (confirmed against the real decompiled Entity.java on both <26
@@ -632,8 +676,15 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         // mappings (a stricter type than the plain Holder registry lookup below returns) -
         // EnchantmentHelper.getItemEnchantmentLevel takes a plain Holder instead, already the exact
         // pattern SoulboundHandler.java's own Silk Touch check uses (see that class).
+        //? if fabric || neoforge {
         return net.minecraft.world.item.enchantment.EnchantmentHelper.getItemEnchantmentLevel(this.level().registryAccess()
                 .lookupOrThrow(net.minecraft.core.registries.Registries.ENCHANTMENT).getOrThrow(Enchantments.SILK_TOUCH), tool) > 0;
+        //?}
+        // Real 1.20.1 vanilla predates data-driven enchantments entirely - Enchantments.SILK_TOUCH is a
+        // plain Enchantment instance directly (no registry Holder lookup needed at all).
+        //? if legacyforge {
+        /*return net.minecraft.world.item.enchantment.EnchantmentHelper.getItemEnchantmentLevel(Enchantments.SILK_TOUCH, tool) > 0;
+        *///?}
     }
 
     //? if <26 {
@@ -646,14 +697,25 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         playBreakSound();
         return true;
     }
+    //?}
 
     /** Right-click - opens the resize menu server-side. Actual menu open lives in ScreenMenuUtils
      * (mirrors every other phone screen's own open call), kept out of this class since Entity subclasses in
      * this codebase don't otherwise reach into world/inventory/ package concerns directly. */
+    //? if (fabric || neoforge) && <26 {
     @Override
     public InteractionResult interact(Player player, InteractionHand hand) {
         if (!this.level().isClientSide())
             fr.lordfinn.crazyphone.utils.ScreenMenuUtils.openPhotoFrameResizeMenu(player, this);
+        return InteractionResult.SUCCESS;
+    }
+    //?}
+    // The resize-menu feature is inert below 1.20.5 (see ScreenMenuUtils#openPhotoFrameResizeMenu's own
+    // >=1.20.5-only scope) - a no-op interact here, matching the rest of this entity's own inert-below-
+    // 1.20.5 story (ModEntities.java's doc comment, tryPlace's own stub above).
+    //? if legacyforge {
+    @Override
+    public InteractionResult interact(Player player, InteractionHand hand) {
         return InteractionResult.SUCCESS;
     }
     //?}
@@ -686,6 +748,11 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
         // undyed" convention for DYED_COLOR - see CrazyPhonePhotoItemRenderer#borderRgb's matching read
         // side) - an un-dyed frame's dropped stack stays with no DYED_COLOR at all, same as a plain photo
         // that was never placed.
+        //? if legacyforge {
+        /*// Real 1.20.1 vanilla has no Data Components system at all (see CrazyPhonePhotoItem's own doc
+        // comment on the same boundary) - a dyed frame's dropped stack just carries no color info here.
+        *///?}
+        //? if fabric || neoforge {
         if (borderRgb != 0xFFFFFF) {
             //? if >=26 {
             /*stack.set(net.minecraft.core.component.DataComponents.DYED_COLOR, new net.minecraft.world.item.component.DyedItemColor(borderRgb));
@@ -693,6 +760,7 @@ public class CrazyPhonePhotoFrameEntity extends Entity {
             stack.set(net.minecraft.core.component.DataComponents.DYED_COLOR, new net.minecraft.world.item.component.DyedItemColor(borderRgb, false));
             //?}
         }
+        //?}
         return stack;
     }
 
